[package]
name = "safe-package"
version = "1.0.0"
edition = "2021"
description = "A security wrapper for package managers."
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.21"
nix = "0.26.2"
serde = { version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
serde_derive = "1.0.160"
clap = { version = "4.2.4", features = ["derive"] }
debug_print = "1.0.0"

